2000-07-19  Eric Melski  <ericm@ajubasolutions.com>

	* win/makefile.vc: Applied patch from Don Porter to provide better
	nmake support for NT/Alpha [RFE: 5938].

2000-07-18  Mo DeJong  <mdejong@redhat.com>

	* unix/configure.in:
	* unix/tcl.m4:
	* win/tcl.m4: Properly quote arguments to m4 macros. This allows
	Tcl to work with the new version of autoconf.

2000-07-18  Eric Melski  <ericm@ajubasolutions.com>

	* tests/opt.test: Removed references to Lfirst, Lrest functions.

	* library/opt0.4/optparse.tcl: Applied patch from Chris Nelson,
	which replaces the [Lfirst] function with an inline [lindex ... 0]
	and [Lrest] with [lrange ... 1 end], for better performance. 
	[RFE: 6019]
	

2000-07-18  Eric Melski  <ericm@scriptics.com>

	* compat/string.h: Fixed function prototypes for strpbrk and
	strtok [Bug: 6020].

2000-07-17  David Gravereaux  <davygrvy@ajubasolutions.com>

	* win/tclWinChan.c: Win2K OS bug with
	GetStdHandle(STD_OUTPUT_HANDLE)	giving the wrong answer.  This
	made TclpGetDefaultStdChannel grab what it thought was a valid
	native stdout handle.  Added a new WriteFile() test to	make sure
	it's really valid.  This OS bug doesn't affect the shells.  Only
	-subsystem:windows (aka WinMain) application that dynamically
	load tclXX.dll [BUG: 5971]

2000-07-17  Eric Melski  <ericm@scriptics.com>

	* library/msgcat1.0/msgcat.tcl: 
	* doc/msgcat.n: 
	* tests/msgcat.test: Applied patches from Chris Nelson, to provide
	the mcmset function, which allows the translator to set multiple
	string translations in a single function call, rather than
	requiring many calls to mcset. [RFE: 6000, 5993].  In addition,
	these patches correct mcload to use utf-8 encoding on when reading
	message catalog files, and provides for better default behavior
	for determining the locale on a Windows system.

2000-07-17  Mo DeJong  <mdejong@redhat.com>

	* unix/tcl.m4 (SC_ENABLE_GCC): Don't set CC=gcc
	before running AC_PROG_CC if CC is already set.
